--- a/Public/search.html
+++ b/Public/search.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF Shop | Search Results</title>
 
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/search.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-    <link rel="manifest" href="img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="..img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="..img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="..img/icons/favicon-16x16.png">
+    <link rel="manifest" href="..img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,160 +24,15 @@
     <section class="search-results">
         <h2 class="heading">search results for <span id="search-key">product</span></h2>
         <section class="card-container"></section>
-<!--        <div class="product-container">-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card1.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$30</span><span class="actual-price">$60</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card2.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$22</span><span class="actual-price">$44</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card3.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$28</span><span class="actual-price">$56</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card4.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card5.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card6.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card7.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card8.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card9.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card10.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card11.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="discount-tag">50% off</span>-->
-<!--                    <img src="img/card12.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-btn">add to wishlist</button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$20</span><span class="actual-price">$40</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+
     </section>
 
     <footer></footer>
 
-    <script src="js/nav.js"></script>
-    <script src="js/footer.js"></script>
-    <script src="js/home.js"></script>
-    <script src="js/search.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/home.js"></script>
+    <script src="../js/search.js"></script>
 
 </body>
 </html>
