Ver5: fix Slider on Product cart

--- a/Public/index.html
+++ b/Public/index.html
@@ -23,7 +23,7 @@
             authDomain: process.env.AUTH_DOMAIN,
             databaseURL: process.env.DATABASE_URL,
             projectId: process.env.PROJECT_ID,
-            storageBucket: process.env.PROJECT_ID,
+            storageBucket: process.env.STORAGE_BUCKET,
             messagingSenderId: process.env.MESSAGING_SENDER_ID,
             appId: process.env.APP_ID,
             measurementId: process.env.MEASUREMENT_ID
@@ -80,6 +80,7 @@
     </header>
 
     <!--  cards container  -->
+    <section id="best-selling-products"></section>
     <section class="product">
         <h2 class="product-category">New Arrivals</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
@@ -92,9 +93,9 @@
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
+                    <h2 class="product-brand">EB&IVE</h2>
                     <p class="product-short-des">Diaz luxurious linen Blouse</p>
-                    <span class="price">$134.95</span><span class="actual-price">$175.45</span>
+                    <span class="price">$34.95</span><span class="actual-price">$75.45</span>
                 </div>
             </div>
             <div class="product-card">
@@ -184,7 +185,6 @@
         </div>
     </section>
 
-    <section id="best-selling-products"></section>
     <!--  COLLECTIONS  -->
     <section class="collection-container">
         <a href="/women" class="collection">
