--- a/Public/seller.html
+++ b/Public/seller.html
@@ -70,7 +70,7 @@
 
         <!-- delete alert -->
         <div class="delete-alert">
-            <div>
+            <div class="alert">
                 <button class="close-btn"><img src="img/close.png" alt=""></button>
                 <img src="img/delete-warning.png" class="delete-svg" alt="">
                 <p class="text">Are you sure you want to delete this product?</p>
@@ -79,20 +79,7 @@
         </div>
         <!-- cards -->
         <div class="product-container">
-<!--            <div class="product-card">-->
-<!--                <div class="product-image">-->
-<!--                    <span class="tag">Draft</span>-->
-<!--                    <img src="img/card5.png" class="product-thumb" alt="">-->
-<!--                    <button class="card-action-btn edit-btn"><img src="img/edit.png" alt=""></button>-->
-<!--                    <button class="card-action-btn open-btn"><img src="img/open.png" alt=""></button>-->
-<!--                    <button class="card-action-btn delete-popup-btn"><img src="img/delete.png" alt=""></button>-->
-<!--                </div>-->
-<!--                <div class="product-info">-->
-<!--                    <h2 class="product-brand">brand</h2>-->
-<!--                    <p class="product-short-des">a short line about the cloth.</p>-->
-<!--                    <span class="price">$120</span><span class="actual-price">$240</span>-->
-<!--                </div>-->
-<!--            </div>-->
+
         </div>
     </div>
 
