AddToCart & AddToWishlist Btns functions

--- a/Public/cart.html
+++ b/Public/cart.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF Shop | Cart</title>
 
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/cart.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-    <link rel="manifest" href="img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
+    <link rel="manifest" href="../img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,21 +26,7 @@
             <p class="section-heading">Your cart</p>
             <div class="cart">
                 <!-- cart product goes here -->
-<!--                <img src="img/cart-empty.png" class="empty-card-img" alt="">-->
-<!--                <div class="sm-product">-->
-<!--                    <img src="img/product image 1.png" class="sm-product-img" alt="">-->
-<!--                    <div class="sm-text">-->
-<!--                        <p class="sm-product-name">Brand</p>-->
-<!--                        <p class="sm-des">This is short line about</p>-->
-<!--                    </div>-->
-<!--                    <div class="item-counter">-->
-<!--                        <button class="counter-btn decrement">-</button>-->
-<!--                        <p class="item-count">1</p>-->
-<!--                        <button class="counter-btn increment">+</button>-->
-<!--                    </div>-->
-<!--                    <p class="sm-price">$20</p>-->
-<!--                    <button class="sm-delete-btn"><img src="img/close.png" alt=""></button>-->
-<!--                </div>-->
+
             </div>
             <p class="section-heading">your wishlist</p>
             <div class="wishlist">
@@ -58,9 +44,10 @@
 
     <footer></footer>
 
-    <script src="js/nav.js"></script>
-    <script src="js/footer.js"></script>
-    <script src="js/home.js"></script>
-    <script src="js/cart.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/home.js"></script>
+    <script src="../js/cart.js"></script>
+    <script src="../js/search.js"></script>
 </body>
 </html>
