--- a/Public/index.html
+++ b/Public/index.html
@@ -190,15 +190,15 @@
     <!--  COLLECTIONS  -->
     <section class="collection-container">
         <a href="/women" class="collection">
-            <img src="img/women-collection.png" alt="">
+            <img src="img/women-collection.jpg" alt="">
             <p class="collection-title">For Her</p>
         </a>
         <a href="/men" class="collection">
-            <img src="img/men-collection.png" alt="">
+            <img src="img/men-collection.jpg" alt="">
             <p class="collection-title">For Him</p>
         </a>
         <a href="/accessories" class="collection">
-            <img src="img/accessories-collection.png" alt="">
+            <img src="img/accessories-collection.jpg" alt="">
             <p class="collection-title">accessories</p>
         </a>
     </section>
