--- a/Public/product.html
+++ b/Public/product.html
@@ -23,6 +23,7 @@
     <nav class="navbar"></nav>
 
     <section class="product-details">
+
         <div class="image-slider">
             <div class="product-images">
                 <img src="" class="active" alt="">
@@ -56,8 +57,8 @@
             <label for="xxxl-size" class="size-radio-btn">xxxl</label>
 
             <div class="btn-group">
-                <button class="btn" id="cart-btn">Add to Cart</button>
-                <button class="btn" id="wishlist-btn">Add to Wishlist</button>
+                <button class="btn cart-btn">Add to Cart</button>
+                <button class="btn wishlist-btn">Add to Wishlist</button>
             </div>
         </div>
     </section>
@@ -73,7 +74,7 @@
 
     <section id="you-also-may-like"></section>
 
-    <section id="men-tshirt-products"></section>
+<!--    <section id="men-tshirt-products"></section>-->
 
     <footer></footer>
 
