--- a/Public/women.html
+++ b/Public/women.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/men.css">
+    <link rel="stylesheet" href="../css/women.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
@@ -24,8 +25,9 @@
     <div class="content-container">
         <div class="image-wrapper">
             <img src="../img/women-collection_2.jpg" class="section-image" alt="">
-            <h1 class="collection-title">Collection For Her</h1>
-            <p class="collection-short-des">where elegance and fashion unite, <br> allowing every woman <br>
+            <div class="text-overlay">
+                <h1 class="collection-title">Collection For Her</h1>
+                <p class="collection-short-des">where elegance and fashion unite, <br> allowing every woman <br>
             to explore her unique style <br>  without bounds.</p>
             </div>
         </div>
