Update: fix checkout

--- a/Public/mail.html
+++ b/Public/mail.html
@@ -32,7 +32,7 @@
             display: block;
             line-height: 50px;
             margin: 30px auto 60px;
-            text-transform: capitalize;
+            /*text-transform: capitalize;*/
         }
         .heading span{
             font-weight: 300;
@@ -60,7 +60,7 @@
     <div>
         <a href="/"><img src="img/logo-green.png" class="logo" alt=""></a>
         <h1 class="heading">Dear user, <span>your order is successfully placed</span></h1>
-        <button class="btn">check status</button>
+        <button class="btn">Check Status</button>
     </div>
 </body>
 </html>
