--- a/Public/search.html
+++ b/Public/search.html
@@ -22,7 +22,7 @@
     <nav class="navbar"></nav>
 
     <section class="search-results">
-        <h2 class="heading">search results for <span id="search-key">product</span></h2>
+        <h2 class="heading">Search results for <span id="search-key">product</span></h2>
         <section class="card-container"></section>
 
     </section>
