--- a/Public/checkout.html
+++ b/Public/checkout.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF Attire Shop : Checkout</title>
 
-    <link rel="stylesheet" href="css/signup.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="../css/signup.css">
+    <link rel="stylesheet" href="../css/home.css">
 
-    <link rel="stylesheet" href="css/checkout.css">
-    <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="../css/checkout.css">
+    <link rel="stylesheet" href="../css/cart.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-    <link rel="manifest" href="img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
+    <link rel="manifest" href="../img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,15 +48,16 @@
     <div class="cart-section">
         <div class="product-list">
             <p class="section-heading">your cart</p>
-                <!--  1:33 -->
-                <!--                <img src="img/cart-empty.png" class="empty-card-img" alt="">-->
+            <div class="cart">
+
+            </div>
 
         </div>
         <div class="checkout-section">
             <div class="checkout-box">
                 <p class="text">Your total bill,</p>
                 <h1 class="bill">$00</h1>
-                <button class="place-order-btn">place order</button>
+                <button class="place-order-btn">Place Order</button>
 
             </div>
         </div>
@@ -65,12 +66,13 @@
 
     <footer></footer>
 
-    <script src="js/nav.js"></script>
-    <script src="js/home.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/checkout.js"></script>
-    <script src="js/footer.js"></script>
-    <script src="js/token.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/home.js"></script>
+    <script src="../js/cart.js"></script>
+    <script src="../js/checkout.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/token.js"></script>
+    <script src="../js/search.js"></script>
 
 </body>
 </html>
